// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must fail when CUnit not found 1`] = `[Error: CUnit bad not found]`;

exports[`must fail when getConnection not found 1`] = `"Connection notfound not found"`;

exports[`with bad config 1`] = `[MissingDriverError: Wrong driver undefined given. Supported drivers are: "cordova", "mysql", "postgres", "mssql", "oracle", "mariadb", "sqlite".]`;

exports[`with config 1`] = `true`;

exports[`with config 2`] = `Array []`;

exports[`with config 2 database 1`] = `Array []`;

exports[`with config 2 database 2`] = `
Array [
  Photo {
    "description": "test desc",
    "fileName": "testfile",
    "id": 1,
    "isPublished": false,
    "name": "test",
    "views": 0,
  },
]
`;

exports[`with config 2 database 3`] = `Array []`;

exports[`with config 2 database 4`] = `
Array [
  Heroes {
    "id": 1,
    "name": "test",
    "power": "test power",
  },
]
`;

exports[`with config 3`] = `
Array [
  Photo {
    "description": "test desc",
    "fileName": "testfile",
    "id": 1,
    "isPublished": false,
    "name": "test",
    "views": 0,
  },
]
`;

exports[`with no driver 1`] = `[DriverPackageNotInstalledError: Postgres package has not been found installed. Try to install it: npm install pg --save]`;

exports[`with one connection with name and entity without cunit 1`] = `true`;

exports[`with one connection with name and entity without cunit 2`] = `Array []`;

exports[`with one connection with name and entity without cunit 3`] = `
Array [
  Photo {
    "description": "test desc",
    "fileName": "testfile",
    "id": 1,
    "isPublished": false,
    "name": "test",
    "views": 0,
  },
]
`;

exports[`without config folder 1`] = `[Error: PluginTypeormConfig connectionOptions is mandatory]`;
